# ImageGraphCutSegmentation

./: .gitignore  .gitmodules  CMakeLists.txt  ImageGraphCut.cxx  ImageGraphCut.h  ImageGraphCut.hpp  PixelDifference.h  README.md  README.txt
Examples/: CMakeLists.txt  ImageGraphCutSegmentationExample.cpp
Tests/: CMakeLists.txt  ImageGraphCutSegmentationTest.cpp
data/: background.stroke  foreground.stroke  soldier_baseline.fbmask
